--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -542,7 +542,7 @@ Un graphe de calcul est la représentation de fonctions composées comme un rés
 
 L’intérêt principal de cette représentation est la rapidité et la facilité de l’implémentation de l’algorithme de backpropagation. En effet, le caractère modulaire de cette dernière rend aisé le calcul de gradient en appliquant la règle de la chaîne, comme le montre l’exemple suivant :
 
-\begin{figure}
+\begin{figure}[!h]
 \begin{center}
 \includegraphics[scale=0.25]{images/retropropagation_graphe.png}
 \caption{Décomposotion de la rétropropagation de l'erreur dans un graphe de calcul simple.}
@@ -558,22 +558,18 @@ Là encore, l'architecture retenue contient 2 classes mères : Node et Graph, un
 
 La différence principale avec l'architecture précédente est dans la modularité de la classe Node. Bien qu'elle joue un rôle similaire à celui de la classe Neuron dans le modèle Neuron/Network, elle est bien plus souple : une node peut représenter une entrée du graph, un vecteur de poids, une opération élémentaire (addition, soustraction, produit scalaire), ou une fonction (fonction d'activation d'un neurone ou fonction de coût du réseau). Une node prend pour entrée une matrice (ou 2 dans le cas des opérateurs élémentaires), et donne en sortie ses résultats sous la forme d'une matrice de taille adaptée. De même elle peut calculer le gradient par rapport à ses entrées étant donné celui de ses enfants toujours sous forme matricielle.  Cette capacité des nodes à gérer les matrices est primordiale car elle permet de créer un réseau ne possédant qu'une seule node d'entrée et de propager à travers lui tout un lot d'exemples en une seule fois, diminuant ainsi grandement le nombre d'appels objet en les remplaçant par des opérations matricielles. Les résultats obtenus avec cette architecture permettront par la suite de confirmer que les appels objets et non les opérations occupaient la majeure partie du temps de calcul dans l'implémentation présentée en chapitre 1.
 
-\begin{figure}
-\begin{center}
+\begin{figure}[!h]
+\centering
+
+\tikzset{every picture/.style={scale=0.6}}
+\input{"images/graphe_de_calcul.tex"}
 \caption{Schéma d'un graphe de calcul pour un neurone simple}
 \label{graphe_de_calcul}
-\end{center}
 \end{figure}
 
 Un graph commence par une node d'entrée, suivie d'un ensemble de nodes de calcul dont la dernière est qualifiée de node de sortie. Une ou plusieurs node(s) de fonction de coût prennent pour parent la node de sortie, une node d'entrée qu'on actualisera aux valeurs des sorties attendues lors de l'entrainement et une node de régularisation. Enfin on clôt le graph par une node qui possède un gradient unitaire constant et aucune sortie. Elle permettra d'initier la descente du gradient dans la pile des appels récursifs des nodes depuis les entrées vers la fin du graph. C'est le graph qui gère la propagation des exemples et la descente du gradient à travers les nodes mais son rôle est très limité de par la grande autonomie qui est donnée à celles-ci. Les fonctions de propagation et rétropropagation de chaque node sont en effet codée de sorte à ce qu'un unique appel de leur fonction de propagation (respectivement rétropropagation) sur la node d'entrée (respectivement de sortie) donne lieu à une cascade d'appel jusqu'à l'obtention du résultat voulu. Dans une propagation par exemple, on appelle la méthode « propager » sur la dernière node du réseau qui l’appellera elle-même sur ses parents pour calculer sa sortie, ce qui actualisera les sorties de toutes les nodes nécessaires au calcul du résultat initialement demandé.
 
-\begin{figure}
-\begin{center}
-\input{"images/graphe_de_calcul.tex"}
-\caption{Schéma d'un graphe de calcul pour un neurone simple}
-\label{graphe_de_calcul}
-\end{center}
-\end{figure}
+
 
 \section{Résultats}
 
