--- a/images/graphe_de_calcul.tex
+++ b/images/graphe_de_calcul.tex
@@ -1,29 +1,42 @@
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm, scale=0.5]
-\clip(2.4143827288284365,2.1911915106170423) rectangle (28.896515457132203,16.893403649017483);
-\draw(4.982,6.946) circle (1.5319647515527244cm);
-\draw(10.46,6.946) circle (1.5319647515527248cm);
-\draw(15.918356266000036,6.947742334000014) circle (1.5319647515527248cm);
-\draw(21.396356266000033,6.947742334000014) circle (1.531964751552723cm);
-\draw(26.874356266000035,6.947742334000014) circle (1.531964751552723cm);
-\draw (4.683242626729719,7.418644715381643) node[anchor=north west] {$\mathcal{X}$};
-\draw (10.001450227410324,7.781662299045852) node[anchor=north west] {$\times$};
-\draw (15.119998157075615,7.509399111297696) node[anchor=north west] {$z=f(y)$};
-\draw(15.911114126755379,11.67271742202839) circle (1.531964751552723cm);
-\draw (14.575471781579308,10.141276592863207) node[anchor=north west] {sortie attendue};
-\draw (14.212454197915102,5.222388334213182) node[anchor=north west] {fonction d'activation};
-\draw (7.859646483791514,5.167935696663551) node[anchor=north west] {opération élémentaire};
-\draw (4.10241449286699,5.1316339382971305) node[anchor=north west] {Entrée};
-\draw (19.966282898992755,5.167935696663551) node[anchor=north west] {fonction de coût};
-\draw (20.420054878573012,7.563851748847327) node[anchor=north west] {$c=h(z,y')$};
-\draw (15.646373653388713,12.228627698932405) node[anchor=north west] {y'};
-\draw (25.30264137885657,5.186086575846762) node[anchor=north west] {gradient constant};
-\draw [->] (6.511832012049577,6.86519149235171) -- (8.930169512469373,6.865162635979358);
-\draw [->] (12.00521159541307,6.880938976773743) -- (14.423549095832865,6.880910120401391);
-\draw [->] (17.483211595413067,6.880938976773743) -- (19.901549095832866,6.880910120401391);
-\draw [->] (22.92499832258255,6.977574257545156) -- (25.34333582300235,6.9775454011728035);
-\draw(4.9814182705273335,11.336093947857117) circle (1.5319647515527193cm);
-\draw (4.429130318164775,9.760108130015787) node[anchor=north west] {$poids$};
-\draw (4.719544385096139,11.883760994451407) node[anchor=north west] {$w$};
-\draw [->] (6.513382260277414,11.334566168750113) -- (8.905056271433413,6.865162935638539);
-\draw [->] (17.442307496209068,11.624108108712399) -- (19.901549095832852,6.880910120401391);
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+
+\clip(0,2) rectangle (30,16);
+
+\draw(5,7) circle (1.5cm);
+\draw(10,7) circle (1.5cm);
+\draw(15,7) circle (1.5cm);
+\draw(20,7) circle (1.5cm);
+\draw(25,7) circle (1.5cm);
+
+\draw(5,11) circle (1.5cm);
+\draw(15,11) circle (1.5cm);
+
+\draw [->] (6.5,7) -- (8.5,7);
+\draw [->] (11.5,7) -- (13.5,7);
+\draw [->] (16.5,7) -- (18.5,7);
+\draw [->] (21.5,7) -- (23.5,7);
+
+\draw [->] (6.5,11) -- (8.5,7);
+\draw [->] (16.5,11) -- (18.5,7);
+
+\draw (5,7) node[anchor=center] {$\mathcal{X}$};
+\draw (10,7) node[anchor=center] {$\times$};
+\draw (15,7) node[anchor=center] {$z=f(y)$};
+\draw (20,7) node[anchor=center] {$c=h(z,y')$};
+
+\draw (5,11) node[anchor=center] {$w$};
+\draw (15,11) node[anchor=center] {$y'$};
+
+
+\draw (5,5) node[anchor=center] {$Entrée$};
+\draw (10,5) node[anchor=center] {$opération \ élémentaire$};
+\draw (15,5) node[anchor=center] {$fonction$};
+\draw (15,4.4) node[anchor=center] {$d'activation$};
+\draw (20,5) node[anchor=center] {$fonction \ de \ coût$};
+\draw (25,5) node[anchor=center] {$gradient \ constant$};
+
+
+\draw (5,9) node[anchor=center] {$poids$};
+\draw (15,9) node[anchor=center] {$sortie\ attendue$};
+
 \end{tikzpicture}
