--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -41,7 +41,7 @@ Quelque soit le type de problème à résoudre, l'objectif est toujours de trouv
 E_{in} = \frac{1}{N}\sum_{i=1}^{N}{e(y^{(i)}, f(x^{(i)})} = \mathbb{E}_{x, y \sim \hat{p}_{data}}(e(y, f(x)))
 \end{equation}
 
-Et l'erreur dans l'absolue, sur toutes les valeurs possibles :
+Et l'erreur dans l'absolu, sur toutes les valeurs possibles :
 
 \begin{equation}
 E_{out} = \mathbb{E}_{x, y \sim p}(e(y, f(x)))
